--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
    
     <nav>
       <div class="funBus">
-        <h1>Fun Buss</h1>
+        <h1>Fun Bus</h1>
       </div>
       <div class="links">
         <div class="link">Home</div>
-        <div class="link">About US</div>
+        <div class="link">About Us</div>
         <div class="link">Blog</div>
         <div class="link">Contact</div>
       </div>
